# Gambit

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  CMakeSettings.json  README.md  cmakelists.txt  proj.cppcheck
doc/: blog.md  todo.md
src/: CMakeLists.txt  Gambit.sln  cmakelists.txt
src/GambitConsole/: GambitConsole.cpp  GambitConsole.vcxproj  GambitConsole.vcxproj.filters
src/GambitEngine/: BitMath.h  Bitboard.cpp  Bitboard.h  Board.cpp  Board.h  CMakeLists.txt  FENParser.cpp  FENParser.h  GambitEngine.cpp  GambitEngine.h  GambitEngine.vcxproj  GambitEngine.vcxproj.filters  GameState.cpp  GameState.h  MoveGenerator.cpp  MoveGenerator.h  Pieces.cpp  Pieces.h  typedef.h
src/GambitEngine/src/: Bitboard.cpp  Board.cpp  FENParser.cpp  GambitEngine.cpp  GameState.h  MoveGenerator.cpp  typedef.h
src/GambitTest/: BitBoardTest.cpp  BoardTest.cpp  FEN.cpp  GambitTest.vcxproj  GambitTest.vcxproj.filters  stdafx.cpp
src/cli/: CMakeLists.txt  commands.cpp  commands.h  commandsUtils.h  main.cpp  printCommand.cpp  printCommand.h
src/engine/: CMakeLists.txt
src/engine/inc/: AlgebraicNotation.h  Bitboard.h  Board.h  FENParser.h  GambitEngine.h  GameState.h  Log.h  Material.h  MoveGenerator.h  MoveNode.h  PieceDef.h  typedef.h  version.h
src/engine/src/: AlgebraicNotation.cpp  AlgebraicNotation.h  BitMath.h  Bitboard.cpp  Bitboard.h  Board.cpp  Board.h  FENParser.cpp  FENParser.h  GambitEngine.cpp  GambitEngine.h  GameState.cpp  Log.h  Material.cpp  Material.h  MoveGenerator.cpp  MoveGenerator.h  MoveNode.h  PieceDef.cpp  PieceGlobals.cpp  PieceGlobals.h  Pieces.cpp  Pieces.h  typedef.h
src/test/: CMakeLists.txt  gtest.cmake  main.cpp
src/test/lib/debug/: gtest_maind.lib
src/test/lib/release/: gtest_main.lib
src/test/src/: Perft.cpp  bitboard_test.cpp  board_test.cpp  fen_test.cpp  materialgrid_test.cpp  movegenerator_test.cpp  notation_test.cpp  perft_test.cpp  unmake_test.cpp
